--- a/content/20161027.md
+++ b/content/20161027.md
@@ -9,7 +9,7 @@ Author: 40423105
 
 <!-- PELICAN_END_SUMMARY -->
 
-<a href="http://imgur.com/POn3cgs"><img src="http://i.imgur.com/POn3cgs.png" title="source: imgur.com" /></a>
+<a href="http://imgur.com/POn3cgs"><img src="http://i.imgur.com/POn3cgs.png" title="source: imgur.com"</a>
 <p> 心得:可以非常簡易的畫出四連桿運動的路線</p>
 <p>Solvespace 四連桿圖檔:</p>
 <p><a href="./../w7/40423105 w7.csv">40423105 w7.csv</a> (請以滑鼠右鍵存檔)</p>
