--- a/content/20161117.md
+++ b/content/20161117.md
@@ -10,7 +10,7 @@ Author: 40423105
 <!-- PELICAN_END_SUMMARY -->
 
 <p>Solvespace 平面四連桿機構模擬</p>
-<p><img src="./../w7/1117.png/" width="800" /></p>
+<a href="http://imgur.com/0SEnY6m"><img src="http://i.imgur.com/0SEnY6m.png" title="source: imgur.com" /></a>
 <p>將所得到的點座標的.csv以Excel的畫圖，得到：</p>
 <p><img src="./../w7/1117 csv.png/" width="800" /></p>
 
