--- a/content/20161117.md
+++ b/content/20161117.md
@@ -12,7 +12,7 @@ Author: 40423105
 <p>Solvespace 平面四連桿機構模擬</p>
 <a href="http://imgur.com/0SEnY6m"><img src="http://i.imgur.com/0SEnY6m.png" title="source: imgur.com" /></a>
 <p>將所得到的點座標的.csv以Excel的畫圖，得到：</p>
-<p><img src="./../w7/1117 csv.png/" width="800" /></p>
+<a href="http://imgur.com/FTjhTHN"><img src="http://i.imgur.com/FTjhTHN.png" title="source: imgur.com" /></a>
 
 <p>繪圖流程, 導入程式庫, 啟動, 然後引用各種模組開始繪圖</p>
 <!-- 導入 Brython 標準程式庫 -->
