--- a/content/20161124.md
+++ b/content/20161124.md
@@ -4,7 +4,7 @@ Category: HW
 Tags: 作業
 Author: 40423105 
 
-
+40423105 11/24作業
 
 
 <!-- PELICAN_END_SUMMARY -->
@@ -57,3 +57,5 @@ three.js
 ### 3. Linkages (fourbar & multilink) (四連桿與多連桿運動模擬)
 
 ### 4. Compiled & API (編譯與延伸應用)
+<p>使用 Virtualbox 虛擬主機執行 Windows 64 位元與 Ubuntu 64 位元環境中的編譯與延伸應用.</p>
+<img src="./../w7/40423105-4.png" width="800">
