--- a/content/20161124.md
+++ b/content/20161124.md
@@ -37,7 +37,7 @@ When we hover the mouse over any entity, constraint, or other object in the sket
 #### Extrude (平行長出或除料)
 <p>STL 格式</p>
 <p>範例:平行長出</p>
-<iframe src="./../w7/404231051124-1.html" width="800" height="600"></iframe>
+<iframe src="./../data/threejs/4042310511241.html" width="800" height="600"></iframe>
 <p>STL 格式</p>
 <p>範例:除料</p>
 <iframe src="./../w7/404231051124-3.html" width="800" height="600"></iframe>
