--- a/content/20161124.md
+++ b/content/20161124.md
@@ -54,6 +54,9 @@ three.js
 
 ### 2. Assembly (零件組立)
 
+<iframe src="./../data/threejs/404231051125.html" width="800" height="600"></iframe>
+<iframe src="https://player.vimeo.com/video/193061660" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/193061660">2016 11 25 22 30 17 286</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 ### 3. Linkages (fourbar & multilink) (四連桿與多連桿運動模擬)
 
 ### 4. Compiled & API (編譯與延伸應用)
