--- a/content/20161124.md
+++ b/content/20161124.md
@@ -58,6 +58,10 @@ three.js
 <iframe src="https://player.vimeo.com/video/193061660" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/193061660">2016 11 25 22 30 17 286</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 ### 3. Linkages (fourbar & multilink) (四連桿與多連桿運動模擬)
+<img src="./../w7/404231051126.png" width="800">
+<img src="./../w7/404231051126-1.png" width="800">
+<img src="./../w7/404231051126-2.png" width="800">
+<img src="./../w7/404231051126-3.png" width="800">
 
 ### 4. Compiled & API (編譯與延伸應用)
 <p>使用 Virtualbox 虛擬主機執行 Windows 64 位元與 Ubuntu 64 位元環境中的編譯與延伸應用.</p>
