--- a/content/20161124.md
+++ b/content/20161124.md
@@ -37,10 +37,10 @@ When we hover the mouse over any entity, constraint, or other object in the sket
 #### Extrude (平行長出或除料)
 <p>STL 格式</p>
 <p>範例:平行長出</p>
-<iframe src="./../w7/4042310511241.html" width="800" height="600"></iframe>
+<iframe src="./../data/threejs/4042310511241.html" width="800" height="600"></iframe>
 <p>STL 格式</p>
 <p>範例:除料</p>
-<iframe src="./../w7/4042310511243.html" width="800" height="600"></iframe>
+<iframe src="./../data/threejs/4042310511243.html" width="800" height="600"></iframe>
 
 #### Lathe (旋轉繞行長出或除料)
 
@@ -50,12 +50,11 @@ STL 格式
 
 three.js
 
-<iframe src="./../w7/404231051124.html" width="800" height="600"></iframe>
+<iframe src="./../data/threejs/404231051124.html" width="800" height="600"></iframe>
 
 ### 2. Assembly (零件組立)
 
-<iframe src="./../w7/404231051125.html" width="800" height="600"></iframe>
-
+<iframe src="./../data/threejs/404231051125.html" width="800" height="600"></iframe>
 <iframe src="https://player.vimeo.com/video/193061660" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/193061660">2016 11 25 22 30 17 286</a> from <a href="https://vimeo.com/user44512429">40423105</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 ### 3. Linkages (fourbar & multilink) (四連桿與多連桿運動模擬)
