--- a/content/20161124.md
+++ b/content/20161124.md
@@ -50,7 +50,7 @@ STL 格式
 
 three.js
 
-<iframe src="./../data/threejs/404231051124.html" width="800" height="600"></iframe>
+<iframe src="./../data/threejs/20161201.html" width="800" height="600"></iframe>
 
 ### 2. Assembly (零件組立)
 
