--- a/content/20161220.md
+++ b/content/20161220.md
@@ -20,7 +20,7 @@ Author: 40423105
 ## 支柱
 <iframe src="./../w7/3d/20161217-1.html" width="800" height="600"></iframe>
 ## 連接桿
-<iframe src="./../w7/3d/連接桿.html" width="800" height="600"></iframe>
+<iframe src="./../w7/3d/20161217-4.html" width="800" height="600"></iframe>
 ## 底盤
 <iframe src="./../w7/3d/20161217-5.html" width="800" height="600"></iframe>
 ## 圓盤
