--- a/content/20161227.md
+++ b/content/20161227.md
@@ -30,3 +30,15 @@ Author: 40423105
 
 ## 支撐桿
 <iframe width="854" height="480" src="https://www.youtube.com/embed/g3-z5v73qBI" frameborder="0" allowfullscreen></iframe>
+
+## 滑軌
+<iframe width="640" height="360" src="https://www.youtube.com/embed/OBPmMhzpQbw" frameborder="0" allowfullscreen></iframe>
+
+##噴頭
+<iframe width="640" height="360" src="https://www.youtube.com/embed/Vhzmmat_5UE" frameborder="0" allowfullscreen></iframe>
+
+##平面
+<iframe width="640" height="360" src="https://www.youtube.com/embed/sQzyC2gBfz8" frameborder="0" allowfullscreen></iframe>
+
+##顯示器
+<iframe width="640" height="360" src="https://www.youtube.com/embed/OJH9kwm5vrU" frameborder="0" allowfullscreen></iframe>
